Minor design changes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>Caravan of Praise</title>
 
@@ -34,7 +34,7 @@
   <body class="index">
 
     <!-- Background -->
-    <div class="bg-layer"></div>
+    <!-- <div class="bg-layer"></div> -->
 
     <!-- ******************** MASTHEAD SECTION ******************** -->
     <main class="masthead screen" id="top" role="main" data-scroll-index="0">
@@ -45,8 +45,8 @@
               <img src="/assets/img/salam.png" alt="">
             </div> -->
 
-            <h1 class="wow bounce-in-down" data-wow-delay="0s">Come Join The Caravan</h1>
-            <h2 class="wow fade-in-up" data-wow-delay="1s">Let's Raise To Praise</h2>
+            <h1 class="wow fade-in-down" data-wow-delay="0s">Come Join The Caravan</h1>
+            <h2 class="wow fade-in-up" data-wow-delay="0.5s">Let's Raise To Praise</h2>
 
             <div class="masthead-logo">
               <img alt="logo" src="/assets/img/logo.png">
@@ -61,13 +61,13 @@
       <div class="container">
         <div class="row">
           <div class="large-12 columns">
-            <h1 class="wow fade-in-left" data-wow-delay="0s">&ldquo;Caravan of Praise&rdquo;</h1>
+            <h1>&ldquo;Caravan of Praise&rdquo;</h1>
           </div>
         </div>
 
         <div class="row">
           <div class="large-12 columns">
-            <h3 class="wow fade-in-right" data-wow-delay="0.5s">
+            <h3>
               <strong>Lyrics by</strong> Erwan Muhibbain &middot;
               <strong>Song by</strong> Fuad Priakustik
             </h3>
@@ -153,133 +153,262 @@
 
             <div class="masonry">
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/20140920_142520.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20140920_142520.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/20140920_142651.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20140920_142651.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/20141008_155728.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20141008_155728.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/20141008_155738.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20141008_155738.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/20141009_001828.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20141009_001828.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/20141009_002435_15.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20141009_002435_15.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/20141018_073446.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/20141018_073446.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0001.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0001.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0023.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0023.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0026.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0026.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0030.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0030.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0032.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0032.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0036.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0036.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141009-WA0037.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141009-WA0037.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141010-WA0031.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141010-WA0031.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141018-WA0018.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141018-WA0018.jpg" alt="">
+                </div>
               </div>
               <div class="item w2">
-                <div class="in"><img src="/assets/img/gth/IMG-20141019-WA0005.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG-20141019-WA0005.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141008_180729.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141008_180729.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141008_180937.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141008_180937.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141008_182816.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141008_182816.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141008_183533.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141008_183533.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141008_193514.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141008_193514.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_134212.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_134212.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_135634.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_135634.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_141106.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_141106.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_150324.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_150324.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_154822.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_154822.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_160716.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_160716.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_162858.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_162858.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_182833.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_182833.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_191940.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_191940.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_192436.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_192436.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_204235.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_204235.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141018_204358.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141018_204358.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_104311.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_104311.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_105614.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_105614.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_110057.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_110057.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_111327.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_111327.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_114232.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_114232.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_122600.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_122600.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_123130.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_123130.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_130442.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_130442.jpg" alt="">
+                </div>
               </div>
               <div class="item">
-                <div class="in"><img src="/assets/img/gth/IMG_20141019_144439.jpg" alt=""></div>
+                <div class="in">
+                  <div class="ol"></div>
+                  <img src="/assets/img/gth/IMG_20141019_144439.jpg" alt="">
+                </div>
               </div>
             </div>
 
