--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
       imgurl = "/assets/img";
     </script>
 
-    <!-- <script src="//ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script> -->
-    <!-- <script src="/assets/js/vendor.head.js"></script> -->
-    <!-- <script src="/assets/js/head.js"></script> -->
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -44,7 +40,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="large-4 medium-6 small-8 small-centered columns">
+          <div class="large-12 columns">
             <div class="bigtext">
               <h1 class="wow fade-in-down" data-wow-delay="0s">Come Join</h1>
               <h2>The Caravan!</h2>
@@ -54,10 +50,10 @@
         <div class="row">
           <div class="large-12 columns">
             <div class="social">
-              <a href="http://facebook.com/caravanofpraise"><img src="/assets/img/social/facebook-a.svg" alt=""></a>
-              <a href="https://www.youtube.com/channel/UCHCtQz9Y1gbzbmUwMwNNjhg"><img src="/assets/img/social/youtube-a.svg" alt=""></a>
-              <a href="http://instagram.com/caravanofpraise"><img src="/assets/img/social/instagram-a.svg" alt=""></a>
-              <a href="http://inteammobile.com/v2"><img src="/assets/img/cart.svg" alt=""></a>
+              <a class="i-facebook"  href="http://facebook.com/caravanofpraise">Facebook</a>
+              <a class="i-youtube"   href="https://www.youtube.com/channel/UCHCtQz9Y1gbzbmUwMwNNjhg">Youtube</a>
+              <a class="i-instagram" href="http://instagram.com/caravanofpraise">Instagram</a>
+              <a class="i-cart2"     href="http://inteammobile.com/v2">Store</a>
             </div>
           </div>
         </div>
@@ -416,8 +412,8 @@
           </div>
         </div>
 
-        <div class="item footer">
-          <footer>
+        <div class="item title footer">
+          <footer class="in">
             <p>&copy; 2014 All rights reserved.</p>
             <p class="credit">Developed with <i class="fa fa-heart"></i> by Mahabbah Tech.</p>
           </footer>
