--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </p>
             <p>
               Longing to live like our great forefathers<br>
-              Heaven guided this journey unfolds
+              Heaven guide this journey to unfold
             </p>
             <p>
               Caravan of Praise<br>
@@ -134,8 +134,9 @@
       </div>
     </section>
 
+
     <!-- ******************** MASONRY ******************** -->
-    <section class="gallery">
+        <section class="gallery">
       <div class="container">
         <div class="item title title-1">
           <div class="in">
