--- a/index.html
+++ b/index.html
@@ -141,6 +141,209 @@
 
     <div class="item w2">
       <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 10.12.37.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 11.18.05.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 11.25.48.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 13.11.11.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 13.34.25.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 16.15.33.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 21.48.45.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 21.49.32.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 22.00.26.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 23.01.31.jpg" alt="">
+      </div>
+    </div>
+    <div class="item title title-2">
+      <div class="in">
+        <h1>#Join.</h1>
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 23.16.51.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-29 23.22.43.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 18.11.50.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 20.53.41.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 21.27.49.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 22.50.19.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 22.51.03.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 23.18.04.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 23.22.23.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 23.28.53.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-30 23.29.31.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 10.08.32.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 16.17.11.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 16.35.13.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 21.07.50.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 22.59.15.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 23.07.26.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 23.12.06.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 23.22.18.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 23.22.50.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2014-12-31 23.31.08.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2015-01-01 00.00.48.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
+        <img src="/assets/img/gth2/2015-01-01 12.52.12.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="item w2">
+      <div class="in">
         <img src="/assets/img/gth/20140920_142520.jpg" alt="">
       </div>
     </div>
@@ -148,6 +351,12 @@
     <div class="item">
       <div class="in">
         <img src="/assets/img/gth/20140920_142651.jpg" alt="">
+      </div>
+    </div>
+    <div class="item title title-3">
+      <div class="in">
+        <h1>#The</h1>
+        <h1>Caravan.</h1>
       </div>
     </div>
 
@@ -196,11 +405,6 @@
     <div class="item w2">
       <div class="in">
         <img src="/assets/img/gth/IMG-20141009-WA0026.jpg" alt="">
-      </div>
-    </div>
-    <div class="item title title-2">
-      <div class="in">
-        <h1>#Join.</h1>
       </div>
     </div>
 
@@ -351,12 +555,6 @@
     <div class="item">
       <div class="in">
         <img src="/assets/img/gth/IMG_20141019_104311.jpg" alt="">
-      </div>
-    </div>
-    <div class="item title title-3">
-      <div class="in">
-        <h1>#The</h1>
-        <h1>Caravan.</h1>
       </div>
     </div>
 
