--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     <section class="lyrics">
   <div class="container">
     <div class="row">
+      <div class="large-12 columns video">
+        <iframe src="http://www.videomak.com/v/?vid=QSTT4ql1FSavRFeyvwxu" frameborder="0"></iframe>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="large-12 columns">
         <h1>&ldquo;Caravan of Praise&rdquo;</h1>
       </div>
